--- a/UnoStandardRefTest2/UnoStandardRefTest2.Shared/MainPage.xaml
+++ b/UnoStandardRefTest2/UnoStandardRefTest2.Shared/MainPage.xaml
@@ -5,7 +5,10 @@
     xmlns:local="using:UnoStandardRefTest2"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    xmlns:shared="clr-namespace:UnoStandardRefTest2.Shared"
+    xmlns:wasm="http://uno.ui/wasm"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    mc:Ignorable="d wasm win">
     <Page.Resources>
         <DataTemplate x:Key="dataTemplate">
             <Button Margin="5" Height="50" Width="250">
@@ -16,13 +19,10 @@
         </DataTemplate>
     </Page.Resources>
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Hello, world !" Margin="20" FontSize="30" />
-        <Button Margin="5" Height="50" Width="250">
-            <Button.Content>
-                <TextBlock Text="Wrap text only when long" TextWrapping="Wrap"/>
-            </Button.Content>
-        </Button>
-        <ListView ItemsSource="{Binding Items}" ItemTemplate="{StaticResource dataTemplate}">
-        </ListView>
+        <TextBox/>
+        <win:ComboBox ItemsSource="{Binding Items}" >
+        </win:ComboBox>
+        <wasm:ComboBox ItemsSource="{Binding Items}" shared:APTest.KeyAware="True">
+        </wasm:ComboBox>
     </StackPanel>
 </Page>
